fix: scrollbar firefox fallback

--- a/sidebar/sidebar.css
+++ b/sidebar/sidebar.css
@@ -41,6 +41,8 @@
 
 * {
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.05) transparent;
 }
 
 body {
